--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
     - uses: actions/upload-artifact@v3
       with:
         name: zygisk-il2cppdumper
-        path: out/magisk_module_release/
+        path: ${{ github.workspace }}/app/build/outputs/apk/release
