--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,8 @@ jobs:
       with:
         name: zygisk-il2cppdumper
         path: out/magisk_module_release/
-    
-    - name : upload apk
-      uses: actions/upload-artifact@master
-      if: always()
+
+    - name: Download a single artifact
+      uses: actions/download-artifact@v3
       with:
-        name: xupdate_apk
-        path: ${{ github.workspace }}/app/build/outputs/apk/release
+        name: output-log-file
